[metadata]
name = spikelearn
author = Angel Yanguas-Gil
version = 0.1.0
description = Online learning with spiking networks
long_description = file: README.rst
keywords = spiking neurons, neural networks, AI
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
